--- a/.github/workflows/quarkus-deploy.yml
+++ b/.github/workflows/quarkus-deploy.yml
@@ -43,6 +43,7 @@ jobs:
       - name: Build and push Docker image
         env:
           QUARKUS_CONTAINER_IMAGE_REGISTRY: ${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.ap-northeast-1.amazonaws.com
+          QUARKUS_CONTAINER_IMAGE_GROUP: ""
           QUARKUS_PACKAGE_JAR_ENABLED: false
         run: |
           ./gradlew imagePush -Dquarkus.native.enabled=true -Dquarkus.native.container-build=true -Dquarkus.container-image.push=true
