Implement hashing functionality with history tracking and time provider

--- a/quarkus-app/src/main/resources/application.properties
+++ b/quarkus-app/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 quarkus.container-image.name=quarkus-app
 quarkus.banner.enabled=false
 quarkus.smallrye-health.root-path=/health
+quarkus.hibernate-orm.physical-naming-strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
+quarkus.datasource.devservices.port=5432
