Implement hashing functionality with JPA persistence and test container support

--- a/spring-app/src/main/resources/application.properties
+++ b/spring-app/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=spring-app
 spring.main.banner-mode=off
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:tc:postgresql:17-alpine:///spring-app
