Add RDS stack and configure ECS cluster with autoscaling and container insights

--- a/quarkus-app/src/main/resources/application.properties
+++ b/quarkus-app/src/main/resources/application.properties
@@ -3,3 +3,7 @@ quarkus.banner.enabled=false
 quarkus.smallrye-health.root-path=/health
 quarkus.hibernate-orm.physical-naming-strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
 quarkus.datasource.devservices.port=5432
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.username=${DB_USERNAME:postgres}
+quarkus.datasource.password=${DB_PASSWORD:postgres}
+quarkus.datasource.jdbc.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
