--- a/spring-app/src/main/resources/application.properties
+++ b/spring-app/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=spring-app
 spring.main.banner-mode=off
+management.endpoints.web.base-path=/
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:tc:postgresql:17-alpine:///spring-app
