--- a/.github/workflows/spring-deploy.yml
+++ b/.github/workflows/spring-deploy.yml
@@ -43,5 +43,5 @@ jobs:
       - name: Build and push Docker image
         run: |
           docker build -t spring-app .
-          docker tag spring-app:1.0-SNAPSHOT ${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.ap-northeast-1.amazonaws.com/spring-app:1.0-SNAPSHOT
+          docker tag spring-app:latest ${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.ap-northeast-1.amazonaws.com/spring-app:1.0-SNAPSHOT
           docker push ${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.ap-northeast-1.amazonaws.com/spring-app:1.0-SNAPSHOT
