Update application.properties for production database configuration

--- a/quarkus-app/src/main/resources/application.properties
+++ b/quarkus-app/src/main/resources/application.properties
@@ -3,6 +3,6 @@ quarkus.smallrye-health.root-path=/health
 quarkus.hibernate-orm.physical-naming-strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
 quarkus.datasource.devservices.port=5432
 quarkus.datasource.db-kind=postgresql
-quarkus.datasource.username=${DB_USERNAME:postgres}
-quarkus.datasource.password=${DB_PASSWORD:postgres}
-quarkus.datasource.jdbc.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+%prod.quarkus.datasource.username=${DB_USERNAME}
+%prod.quarkus.datasource.password=${DB_PASSWORD}
+%prod.quarkus.datasource.jdbc.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
