Update application properties for development environment and CI configuration

--- a/.github/workflows/spring-ci.yml
+++ b/.github/workflows/spring-ci.yml
@@ -30,4 +30,6 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: Build and run tests
+        env:
+          SPRING_PROFILES_ACTIVE: dev
         run: ./gradlew build
