--- a/spring-app/src/main/resources/application.properties
+++ b/spring-app/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 spring.application.name=spring-app
 spring.main.banner-mode=off
 management.endpoints.web.base-path=/
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.datasource.username=${DB_USERNAME:postgres}
 spring.datasource.password=${DB_PASSWORD:postgres}
 spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:spring-app}
-#spring.datasource.url=jdbc:tc:postgresql:17-alpine:///spring-app
