Configure test database port to support continuous testing in dev mode

--- a/quarkus-app/src/main/resources/application.properties
+++ b/quarkus-app/src/main/resources/application.properties
@@ -3,6 +3,7 @@ quarkus.smallrye-health.root-path=/health
 quarkus.hibernate-orm.physical-naming-strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
 quarkus.datasource.devservices.port=5432
 quarkus.datasource.db-kind=postgresql
+%test.quarkus.datasource.devservices.port=54321
 %prod.quarkus.datasource.username=${DB_USERNAME}
 %prod.quarkus.datasource.password=${DB_PASSWORD}
 %prod.quarkus.datasource.jdbc.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
